Increased line-height

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,6 +8,7 @@ body {
   color: #fbf1c7;
   font-size: 16px;
   font-family: "Inconsolata", monospace, sans-serif;
+  line-height: 1.3rem;
 }
 
 .container {
